--- a/app/views/code_snippets/index.html.erb
+++ b/app/views/code_snippets/index.html.erb
@@ -1,5 +1,4 @@
-<%= render 'public/header' %>
-<section class="page-container">
+<main class="page-container">
   <% if @code_snippets.empty? %>
     <p>No one has uploaded any code yet!</p>
   <% else %>
@@ -9,4 +8,4 @@
       <% end %>
     </div>
   <% end %>
-</section>
+</main>
