--- a/app/views/code_snippets/_card.html.erb
+++ b/app/views/code_snippets/_card.html.erb
@@ -21,7 +21,8 @@
     <i class="fa-solid fa-code-commit"></i>
     <small><%= snippet.language %></small>
   </div>
-  <pre><code class=<%= "language-" + snippet.language %>><%= snippet.code %></code></pre>
+  <%# Code block %>
+  <%= render 'code_snippets/code_block', snippet: snippet %>
   <div class="snippet-item__counters">
     <p><i class="fa-solid fa-star" style="color: orange;"></i> <%= snippet.stars_counter || 0 %> </p>
     <p><i class="fa-solid fa-message" style="color: skyblue;"></i> <%= snippet.comments_counter || 0 %> </p>
