--- a/app/views/code_snippets/new.html.erb
+++ b/app/views/code_snippets/new.html.erb
@@ -1,7 +1,6 @@
-<%= render 'public/header' %>
-<section class="page-container">
-    <div class="snippet-form">
-        <h2>Create New Snippet</h2>
-        <%= render 'form', code_snippet: @code_snippet %>
-    </div>
-</section>
+<main class="page-container">
+  <div class="snippet-form">
+    <h2>Create New Snippet</h2>
+    <%= render 'form', code_snippet: @code_snippet %>
+  </div>
+</main>
