--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <%= javascript_include_tag 'prism'%>
     <script src="https://kit.fontawesome.com/9d6e6aaa13.js" crossorigin="anonymous"></script>
   </head>
-
   <body>
+    <%= render 'shared/header' %>
     <%= yield %>
   </body>
 </html>
