--- a/app/assets/stylesheets/snippet.css
+++ b/app/assets/stylesheets/snippet.css
@@ -171,12 +171,21 @@
   border-radius: 8px;
 }
 
+.snippet__actions > div {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .snippet__btn {
   display: block;
   flex: 1;
   text-align: center;
   background-color: #fff;
+  border: none;
   color: #333;
+  font-size: 1rem;
   transition: all 0.2s;
 }
 
@@ -346,25 +355,19 @@
   text-decoration: none;
   text-transform: uppercase;
   transition: all 0.3s ease-in;
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 3px 1px -2px,
-    rgba(0, 0, 0, 0.14) 0 2px 2px 0,
+  box-shadow: rgba(0, 0, 0, 0.2) 0 3px 1px -2px, rgba(0, 0, 0, 0.14) 0 2px 2px 0,
     rgba(0, 0, 0, 0.12) 0 1px 5px 0;
 }
 
 .snippet-form input[type='submit']:hover,
 .snippet-form input[type='submit']:focus {
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 2px 4px -1px,
-    rgba(0, 0, 0, 0.14) 0 4px 5px 0,
+  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 4px -1px, rgba(0, 0, 0, 0.14) 0 4px 5px 0,
     rgba(0, 0, 0, 0.12) 0 1px 10px 0;
   transform: translateY(-2px);
 }
 
 .snippet-form input[type='submit']:active {
-  box-shadow:
-    rgba(0, 0, 0, 0.2) 0 5px 5px -3px,
-    rgba(0, 0, 0, 0.14) 0 8px 10px 1px,
-    rgba(0, 0, 0, 0.12) 0 3px 14px 2px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 5px 5px -3px,
+    rgba(0, 0, 0, 0.14) 0 8px 10px 1px, rgba(0, 0, 0, 0.12) 0 3px 14px 2px;
   background: #a46bf5;
 }
