--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,17 +8,19 @@
       <li><%= link_to "About", root_path , class: "nav__link"%></li>
     </ul>
   </nav>
-   <% if current_user %>
+  <% if current_user %>
     <div class="btn-group">
       <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'btn nav-btn' %>
       <%= link_to "Upload Snippet", new_code_snippet_path , class: "btn nav-btn btn-outline" %>
+      <%= link_to contributor_path(current_user), class: "btn nav-btn" do %>
+        <%= render 'shared/author_icon', author: current_user %>
+      <% end %>
     </div>
-    <% else %>
+  <% else %>
     <div class="btn-group">
       <%= link_to "Log in", new_user_session_path, class: "btn nav-btn" %>
       <%= link_to "Register", new_user_registration_path, class: "btn nav-btn btn-outline" %>
     </div>
-    <% end %>
+  <% end %>
 </header>
-
 <%= render 'public/alert' %>
