--- a/app/views/code_snippets/_actions.html.erb
+++ b/app/views/code_snippets/_actions.html.erb
@@ -1,7 +1,11 @@
 <div class="snippet__actions">
+  <%# Variables to check if the snippet is starred or bookmarked %>
+  <% star = current_user.find_star(snippet) %>
+  <% bookmark = current_user.find_bookmark(snippet) %>
+  <%# Toggle button to star the snippet %>
   <div>
-    <% if current_user.starred?(snippet) %>
-      <%= button_to code_snippet_star_path(snippet, current_user.find_star(snippet)), method: :delete, remote: true, class: "snippet__btn star-btn" do %>
+    <% if star %>
+      <%= button_to code_snippet_star_path(snippet, star), method: :delete, remote: true, class: "snippet__btn star-btn" do %>
         <i class="fa-solid fa-star"></i> Starred
       <% end %>
     <% else %>
@@ -10,12 +14,23 @@
       <% end %>
     <% end %>
   </div>
+  <%# Button to comment on the snippet %>
   <%= link_to code_snippet_path(snippet), class: "snippet__btn comment-btn" do %>
     <i class="fa-regular fa-comment-dots"></i> Comment
   <% end %>
-  <%= link_to code_snippet_path(snippet), class: "snippet__btn bookmark-btn" do %>
-    <i class="fa-regular fa-bookmark"></i> Bookmark
-  <% end %>
+  <%# Toggle button to bookmark the snippet %>
+  <div>
+    <% if bookmark %>
+      <%= button_to code_snippet_bookmark_path(snippet, bookmark), method: :delete, remote: true, class: "snippet__btn bookmark-btn" do %>
+        <i class="fa-solid fa-bookmark"></i> Saved
+      <% end %>
+    <% else %>
+      <%= button_to code_snippet_bookmarks_path(snippet), method: :post, remote: true, class: "snippet__btn bookmark-btn" do %>
+        <i class="fa-regular fa-bookmark"></i> Bookmark
+      <% end %>
+    <% end %>
+  </div>
+  <%# Button to copy the snippet link %>
   <%= link_to code_snippet_path(snippet), class: "snippet__btn copy-btn" do %>
     <i class="fa-solid fa-link"></i> Copy
   <% end %>
