--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -10,6 +10,8 @@
   --fresh-green: #7ed321;
   --golden-yellow: #fc0;
   --bold-pink: #ff4081;
+
+  /* Alert Colors */
   --green-100: #80d8a1;
   --green-200: #43a047;
   --green-300: #2e7d32;
@@ -19,10 +21,15 @@
   --red-100: #ef9a9a;
   --red-200: #e57373;
   --red-300: #d32f2f;
+
+  /* Font Sizes */
   --fontSmall: 0.9rem;
   --fontNormal: 1.1rem;
+
+  /* Common Styles */
   --shadow-hover: 3px 6px 10px -5px #aaa5;
-  --shadow-inset: inset 0 2px 5px var(--lightGray);
+  --shadow-inset: inset 0 3px 6px var(--lightGray);
+  --ring-focus: 0 0 15px -8px var(--accent-color-1);
   --border-light: solid 1px var(--lightGray);
 }
 
