--- a/app/views/code_snippets/edit.html.erb
+++ b/app/views/code_snippets/edit.html.erb
@@ -2,5 +2,6 @@
   <div class="snippet-form">
     <h2>Edit Snippet</h2>
     <%= render 'form', code_snippet: @code_snippet %>
+    <%# TODO Add cancel button with link to code_snippet %>
   </div>
 </section>
