--- a/app/assets/stylesheets/contributor.css
+++ b/app/assets/stylesheets/contributor.css
@@ -14,20 +14,23 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
-  padding: 3rem 1rem;
+  padding: 2rem 1rem;
   background-color: rgb(255, 255, 255);
   margin: 1rem 0;
-  border-radius: 10px;
+  border-radius: 2px;
   cursor: pointer;
-  box-shadow: 0 0 15px rgba(86, 86, 86, 0.094);
+  box-shadow: 0 0 15px rgba(86, 86, 86, 0.2);
+}
+
+.user-card h3{
+  font-weight: 500;
 }
 
 .user-image {
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
-  box-shadow: 0 5px 15px rgba(86, 86, 86, 0.607);
+ margin-bottom: 4%;
 }
 
 .user-bio {
@@ -39,7 +42,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 
 .user-values {
