--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -22,9 +22,13 @@
   --red-200: #e57373;
   --red-300: #d32f2f;
 
+  /* Font families */
+  --headingFont: 'Luckiest Guy', cursive;
+  --normalFont: 'Nunito', sans-serif;
+  --brandFont: 'Leckerli One', cursive;
+
   /* Font Sizes */
   --fontSmall: 0.9rem;
-  --fontNormal: 1.1rem;
 
   /* Common Styles */
   --shadow-hover: 3px 6px 10px -5px #aaa5;
@@ -42,8 +46,8 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: var(--fontNormal);
+  font-family: var(--normalFont);
+  font-size: 1.1rem;
   background-color: #fff;
 }
 
@@ -56,6 +60,70 @@ button {
   cursor: pointer;
 }
 
+/* *** Nav Bar  */
+
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  color: #333;
+  padding: 0.25rem 1rem;
+}
+
+.brand {
+  display: flex;
+  align-items: center;
+  color: var(--accent-color-1);
+  font-family: var(--brandFont);
+  font-size: 1.1em;
+  text-transform: lowercase;
+  margin-right: 3rem;
+}
+
+.nav {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.nav__ul {
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+  margin: 0;
+  padding: 0.5rem;
+}
+
+.nav__link {
+  color: #555;
+  font-weight: 500;
+  transition: all 0.2s ease;
+}
+
+.nav__link:hover {
+  color: #000;
+}
+
+.btn-group {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.nav-btn {
+  border: solid 1px transparent;
+  border-radius: 10px;
+  transition: all 0.2s ease-in;
+}
+
+.nav-btn:hover {
+  border-color: #333;
+  transform: translateY(-2px);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+}
+
 /* *** Common Styles  */
 
 .page-container {
@@ -63,6 +131,7 @@ button {
 }
 
 .page__heading {
+  font-family: sans-serif;
   font-size: 1.5rem;
   margin-bottom: 2rem;
 }
