--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,28 @@
-<%= render 'public/header' %>
+<%= render 'shared/header' %>
 <h2>Sign up</h2>
 <div class="auth-form-container">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
-
     <div class="field">
       <%= f.label :name %>
       <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
     </div>
-
     <div class="field">
       <%= f.label :bio %>
       <%= f.text_field :bio, class: "form-control" %>
     </div>
-
     <div class="field">
       <%= f.label :email %>
       <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
     </div>
-
     <div class="field">
       <%= f.label :password, "Password (#{@minimum_password_length} characters minimum)" %>
-
       <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
     </div>
-
     <div class="field">
       <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
     </div>
-
     <div class="actions">
       <%= f.submit "Sign up", class: "btn btn-primary" %>
     </div>
