--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -67,6 +67,7 @@ button {
   justify-content: space-between;
   align-items: center;
   background-color: #fff;
+  border-bottom: solid 1px var(--lightGray);
   color: #333;
   padding: 0.25rem 1rem;
 }
@@ -133,7 +134,8 @@ button {
 .page__heading {
   font-family: sans-serif;
   font-size: 1.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 .author-icon {
@@ -166,6 +168,7 @@ button {
   text-align: center;
   text-decoration: none;
   background-color: transparent;
+  border: solid 1px transparent;
   cursor: pointer;
 }
 
